--- a/main.css
+++ b/main.css
@@ -398,10 +398,13 @@ background-color: rgb(255, 255, 255);
      max-width: 100%;
      
     }
-    .box__content_1{
+    
+ }
+ @media(max-width:992px){
+   .box__content_1{
       background: green;
       position: relative;
-      left:-200px;
+      left:0px;
       margin-bottom: 40px;
        
    
@@ -410,7 +413,7 @@ background-color: rgb(255, 255, 255);
        .box__content_2{
          background: yellow;
          position: relative;
-         right:-200px
+         right:0px
           
       
           
