--- a/main.css
+++ b/main.css
@@ -437,8 +437,10 @@ background-color: rgb(255, 255, 255);
 .con{
    background: #000;
    width: 100%;
-   height: 100%;
+   height: 100vh;
    position: absolute;
+   overflow-x: hidden;
+   overflow-y: hidden;
 }
 .cont {
    position: absolute;
@@ -583,3 +585,12 @@ background-color: rgb(255, 255, 255);
      transform: rotate(-360deg);
    }
  }
+
+.imgC{
+  width: 100%;
+  height: 500px;
+}
+
+.imgC img{
+  width: 100%;
+}
